<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:text="@string/enter_your_todo_work_title"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_height="50dp"/>
        <EditText
            android:id="@+id/titleedit"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:hint="@string/title"
            android:layout_height="60dp"
            android:inputType="text"
            android:autofillHints="True"/>
        <TextView
            android:id="@+id/workview"
            android:layout_below="@id/titleedit"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/enter_your_work_here"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_height="50dp"/>
        <EditText
            android:id="@+id/workedit"
            android:hint="@string/enter_here"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:autofillHints="True"
            android:layout_below="@+id/workview"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <Button
            android:id="@+id/save_btn"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_below="@id/workedit"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>